--- a/.notes.md
+++ b/.notes.md
@@ -1,3 +1,28 @@
-* Add this line in zsh plugin "vi-mode-plugin.zsh" so that
-  zsh can use (C-space) as ESC
-  (bindkey '^@' vi-cmd-mode).
+## DWM
+*   Patch fullgap
+        - Biar ada gap antara app
+*   Buat file "shiftview.c" di folder dwm
+        - include di config.h/dwm.c
+        - shiftview gunanya buat pindah worspace pakai
+        - MODKEY bracket
+*   Buat file "movestack.c" di folder dwm
+        - include di config.h/dwm.c
+        - movestack gunanya buat pindah stack pakai
+        - MODKEY Shift j/k
+*   Patch pertag
+        - Biar Tag/Workspace yang lain tidak terpengaruh
+        - dengan setup Tag sebelumnya
+*   Patch warp gunanya biar cursor ikut saat pindah stack(app)
+        - NB: Ini harus di patch manual
+*   Patch actualfullscreen
+*   Patch autoresize
+        - NB: Tidak tahu patch ini bekarja apa tidak
+
+## DWMBLOCKS
+*   Format tanggal yg aku gunakan:
+	{"", "date '+%b %d %Y (%a) %I:%M%p'",					5,		0},
+
+## ZSH
+*   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
+    zsh can use (C-space) as ESC
+    (bindkey '^@' vi-cmd-mode).
