--- a/.notes.md
+++ b/.notes.md
@@ -20,9 +20,26 @@
 
 ## DWMBLOCKS
 *   Format tanggal yg aku gunakan:
+    ```bash
 	{"", "date '+%b %d %Y (%a) %I:%M%p'",					5,		0},
+    ```
 
 ## ZSH
 *   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
     zsh can use (C-space) as ESC
+    ```
     (bindkey '^@' vi-cmd-mode).
+    ```
+
+## Git Bare
+*   First create repository in github
+*   git init --bare
+*   git remote add origin "url from that repository"
+*   paste this line in .bashrc or .zshrc:
+    ```
+    alias config='/usr/bin/git --git-dir=$HOME/.void32 --work-tree=$HOME'
+    ```
+*   In terminal run:
+    ```
+    config config --local status.showUntrackedFiles no
+    ```
