--- a/.notes.md
+++ b/.notes.md
@@ -19,22 +19,22 @@
         - NB: Tidak tahu patch ini bekarja apa tidak
 
 ## DWMBLOCKS
-*   Format tanggal yg aku gunakan:
+*   Date format that is i used:
     ```bash
 	{"", "date '+%b %d %Y (%a) %I:%M%p'",					5,		0},
     ```
 
 ## ZSH
 *   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
-    zsh can use (C-space) as ESC
+    zsh can be used (C-space) as ESC
     ```
-    (bindkey '^@' vi-cmd-mode).
+    (bindkey '^@' vi-cmd-mode)
     ```
 
 ## Git Bare
 *   First create repository in github
-*   git init --bare
-*   git remote add origin "url from that repository"
+*   git init --bare (inside folder)
+*   git remote add origin "url from that repository" (inside folder)
 *   paste this line in .bashrc or .zshrc:
     ```
     alias config='/usr/bin/git --git-dir=$HOME/.void32 --work-tree=$HOME'
