--- a/.notes.md
+++ b/.notes.md
@@ -37,7 +37,7 @@
 *   git remote add origin "url from that repository" (inside folder)
 *   paste this line in .bashrc or .zshrc:
     ```
-    alias config='/usr/bin/git --git-dir=$HOME/.void32 --work-tree=$HOME'
+    alias config='/usr/bin/git --git-dir=$HOME/folder-example --work-tree=$HOME'
     ```
 *   In terminal run:
     ```
