--- a/.notes.md
+++ b/.notes.md
@@ -17,6 +17,7 @@
 *   Patch actualfullscreen
 *   Patch autoresize
         - NB: Tidak tahu patch ini bekarja apa tidak
+*   Patch alwayscenter
 
 ## DWMBLOCKS
 *   Date format that is i used:
@@ -42,4 +43,10 @@
 *   In terminal run:
     ```
     config config --local status.showUntrackedFiles no
+    ```
+* Lakukan perintah git sesuai alias diatas:
+    ```
+    config add (file/folder)
+    config commit -m "comment"
+    config push origin main
     ```
