--- a/.notes.md
+++ b/.notes.md
@@ -1,52 +1,76 @@
-## DWM
-*   Patch fullgap
-        - Biar ada gap antara app
-*   Buat file "shiftview.c" di folder dwm
-        - include di config.h/dwm.c
-        - shiftview gunanya buat pindah worspace pakai
-        - MODKEY bracket
-*   Buat file "movestack.c" di folder dwm
-        - include di config.h/dwm.c
-        - movestack gunanya buat pindah stack pakai
-        - MODKEY Shift j/k
-*   Patch pertag
-        - Biar Tag/Workspace yang lain tidak terpengaruh
-        - dengan setup Tag sebelumnya
-*   Patch warp gunanya biar cursor ikut saat pindah stack(app)
-        - NB: Ini harus di patch manual
-*   Patch actualfullscreen
-*   Patch autoresize
-        - NB: Tidak tahu patch ini bekarja apa tidak
-*   Patch alwayscenter
+# DWM
+    *   Patch fullgap
+            - Biar ada gap antara app
+    *   Buat file "shiftview.c" di folder dwm
+            - include di config.h/dwm.c
+            - shiftview gunanya buat pindah worspace pakai
+            - MODKEY bracket
+    *   Buat file "movestack.c" di folder dwm
+            - include di config.h/dwm.c
+            - movestack gunanya buat pindah stack pakai
+            - MODKEY Shift j/k
+    *   Patch pertag
+            - Biar Tag/Workspace yang lain tidak terpengaruh
+            - dengan setup Tag sebelumnya
+    *   Patch warp gunanya biar cursor ikut saat pindah stack(app)
+            - NB: Ini harus di patch manual
+    *   Patch actualfullscreen
+    *   Patch autoresize
+            - NB: Tidak tahu patch ini bekarja apa tidak
+    *   Patch alwayscenter
 
-## DWMBLOCKS
-*   Date format that is i used:
+# DWMBLOCKS
+    *   Date format that is i used:
     ```bash
 	{"", "date '+%b %d %Y (%a) %I:%M%p'",					5,		0},
     ```
 
-## ZSH
-*   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
-    zsh can be used (C-space) as ESC
+# ZSH
+    *   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
+    zsh can use (C-space) as ESC
     ```
     (bindkey '^@' vi-cmd-mode)
     ```
 
-## Git Bare
-*   First create repository in github
-*   git init --bare (inside folder)
-*   git remote add origin "url from that repository" (inside folder)
-*   paste this line in .bashrc or .zshrc:
-    ```
-    alias config='/usr/bin/git --git-dir=$HOME/folder-example --work-tree=$HOME'
-    ```
-*   In terminal run:
-    ```
-    config config --local status.showUntrackedFiles no
-    ```
-* Lakukan perintah git sesuai alias diatas:
-    ```
-    config add (file/folder)
-    config commit -m "comment"
-    config push origin main
-    ```
+# /etc/rc.local
+    *   Hide message when startup (usually broadcom error)
+        ```
+        dmesg -n 1
+        ```
+    *   Save brightness when startup
+        ```
+        echo 155 > /sys/class/backlight/radeon_bl0/brightness
+        ```
+
+# Git
+    ## Git Bare
+        *   First create repository in github
+        *   git init --bare (inside folder)
+        *   git remote add origin "url from that repository" (inside folder)
+        *   paste this line in .bashrc or .zshrc:
+            ```
+            alias config='/usr/bin/git --git-dir=$HOME/folder-example --work-tree=$HOME'
+            ```
+        *   In terminal run:
+            ```
+            config config --local status.showUntrackedFiles no
+            ```
+        *   Lakukan perintah git sesuai alias diatas:
+            ```
+            config add (file/folder)
+            config commit -m "comment"
+            config push origin main
+            ```
+    ## Git Remove
+        *   Remove directory from Git but Nor local
+            ```
+            git rm -r --cached myFolder
+            git commit -m "Remove Folder"
+            git pus
+            ```
+        *   Remove directory from Git and local
+            ```
+            git rm -r myFolder
+            git commit -m "Remover Folder"
+            git push
+            ```
