--- a/.notes.md
+++ b/.notes.md
@@ -25,6 +25,17 @@
 	{"", "date '+%b %d %Y (%a) %I:%M%p'",					5,		0},
     ```
 
+# Auto Sleep and Lock
+    *   Add this line in /etc/sudoers
+    ```
+    xautolock -time 1 -locker "sudo zzz" &
+    ```
+    *   Install this packages:
+    ```
+    sudo xbps-install xautolock xss-lock
+    ```
+    *   Install slock from suckless
+
 # ZSH
     *   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
     zsh can use (C-space) as ESC
