--- a/.notes.md
+++ b/.notes.md
@@ -28,14 +28,28 @@
 # Auto Sleep and Lock
     *   Add this line in /etc/sudoers
     ```
-    xautolock -time 1 -locker "sudo zzz" &
+    ALL ALL=NOPASSWD: /usr/bin/zzz
+    ```
+    *   Put file in /etc/zzz.d/suspend/slock and fill it with this:
+    ```
+    #!/bin/sh
+    xset s activate
+    sleep 3s
+    ```
+    * then
+    ```
+    chmod +x slock
     ```
     *   Install this packages:
     ```
     sudo xbps-install xautolock xss-lock
     ```
     *   Install slock from suckless
-
+    *   Add this line .xinitrc
+    ```
+    xss-lock slock &
+    xautolock -time 15 -locker "sudo zzz" &
+    ```
 # ZSH
     *   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
     zsh can use (C-space) as ESC
