--- a/.notes.md
+++ b/.notes.md
@@ -1,17 +1,18 @@
 # DWM
-    *   Patch fullgap
+    *   Patch (dwm-functionalgaps+pertag)
+        ** functionalgaps:
             - Biar ada gap antara app
+        ** pertag:
+            - Biar Tag/Workspace yang lain tidak terpengaruh
+            - dengan setup Tag sebelumnya
     *   Buat file "shiftview.c" di folder dwm
             - include di config.h/dwm.c
-            - shiftview gunanya buat pindah worspace pakai
+            - shiftview gunanya buat pindah workspace pakai
             - MODKEY bracket
     *   Buat file "movestack.c" di folder dwm
             - include di config.h/dwm.c
             - movestack gunanya buat pindah stack pakai
             - MODKEY Shift j/k
-    *   Patch pertag
-            - Biar Tag/Workspace yang lain tidak terpengaruh
-            - dengan setup Tag sebelumnya
     *   Patch warp gunanya biar cursor ikut saat pindah stack(app)
             - NB: Ini harus di patch manual
     *   Patch actualfullscreen
