--- a/.notes.md
+++ b/.notes.md
@@ -1,24 +1,24 @@
-# DWM
-    ##   Patch (dwm-functionalgaps+pertag)
-        ** functionalgaps:
-            - Biar ada gap antara app
-        ** pertag:
-            - Biar Tag/Workspace yang lain tidak terpengaruh
-            - dengan setup Tag sebelumnya
-    ##   Buat file "shiftview.c" di folder dwm
-            - include di config.h/dwm.c
-            - shiftview gunanya buat pindah workspace pakai
-            - MODKEY bracket
-    ##   Buat file "movestack.c" di folder dwm
-            - include di config.h/dwm.c
-            - movestack gunanya buat pindah stack pakai
-            - MODKEY Shift j/k
-    ##   Patch warp gunanya biar cursor ikut saat pindah stack(app)
-            - NB: Ini harus di patch manual
-    ##   Patch actualfullscreen
-    ##   Patch autoresize
-            - NB: Tidak tahu patch ini bekarja apa tidak
-    ##   Patch alwayscenter
+## DWM
+    1   Patch (dwm-functionalgaps+pertag)
+        functionalgaps:
+            Biar ada gap antara app
+        pertag:
+            Biar Tag/Workspace yang lain tidak terpengaruh
+            dengan setup Tag sebelumnya
+    2   Buat file "shiftview.c" di folder dwm
+            include di config.h/dwm.c
+            shiftview gunanya buat pindah workspace pakai
+            MODKEY bracket
+    3   Buat file "movestack.c" di folder dwm
+            include di config.h/dwm.c
+            movestack gunanya buat pindah stack pakai
+            MODKEY Shift j/k
+    4   Patch warp gunanya biar cursor ikut saat pindah stack(app)
+            NB: Ini harus di patch manual
+    5   Patch actualfullscreen
+    6   Patch autoresize
+            NB: Tidak tahu patch ini bekarja apa tidak
+    7   Patch alwayscenter
 
 # DWMBLOCKS
     *   Date format that is i used:
