--- a/.notes.md
+++ b/.notes.md
@@ -1,102 +1,103 @@
+#   Setup My void linux 32bit
 ## DWM
-    1   Patch (dwm-functionalgaps+pertag)
-        functionalgaps:
-            Biar ada gap antara app
-        pertag:
-            Biar Tag/Workspace yang lain tidak terpengaruh
-            dengan setup Tag sebelumnya
-    2   Buat file "shiftview.c" di folder dwm
-            include di config.h/dwm.c
-            shiftview gunanya buat pindah workspace pakai
-            MODKEY bracket
-    3   Buat file "movestack.c" di folder dwm
-            include di config.h/dwm.c
-            movestack gunanya buat pindah stack pakai
-            MODKEY Shift j/k
-    4   Patch warp gunanya biar cursor ikut saat pindah stack(app)
-            NB: Ini harus di patch manual
-    5   Patch actualfullscreen
-    6   Patch autoresize
-            NB: Tidak tahu patch ini bekarja apa tidak
-    7   Patch alwayscenter
+1.Patch (dwm-functionalgaps+pertag)
+functionalgaps:
+Biar ada gap antara app
+pertag:
+Biar Tag/Workspace yang lain tidak terpengaruh
+dengan setup Tag sebelumnya
+2.Buat file "shiftview.c" di folder dwm
+include di config.h/dwm.c
+shiftview gunanya buat pindah workspace pakai
+MODKEY bracket
+3.Buat file "movestack.c" di folder dwm
+include di config.h/dwm.c
+movestack gunanya buat pindah stack pakai
+MODKEY Shift j/k
+4.Patch warp gunanya biar cursor ikut saat pindah stack(app)
+NB: Ini harus di patch manual
+5.Patch actualfullscreen
+6.Patch autoresize
+NB: Tidak tahu patch ini bekarja apa tidak
+7.Patch alwayscenter
 
-# DWMBLOCKS
-    *   Date format that is i used:
-    ```bash
-	{"", "date '+%b %d %Y (%a) %I:%M%p'",					5,		0},
-    ```
+## DWMBLOCKS
+Date format that is i used:
+```bash
+{"", "date '+%b %d %Y (%a) %I:%M%p'",5,0},
+```
 
-# Auto Sleep and Lock
-    *   Add this line in /etc/sudoers
-    ```
-    ALL ALL=NOPASSWD: /usr/bin/zzz
-    ```
-    *   Put file in /etc/zzz.d/suspend/slock and fill it with this:
-    ```
-    #!/bin/sh
-    xset s activate
-    sleep 3s
-    ```
-    * then
-    ```
-    chmod +x slock
-    ```
-    *   Install this packages:
-    ```
-    sudo xbps-install xautolock xss-lock
-    ```
-    *   Install slock from suckless
-    *   Add this line .xinitrc
-    ```
-    xss-lock slock &
-    xautolock -time 15 -locker "sudo zzz" &
-    ```
-# ZSH
-    *   Add this line in zsh plugin "vi-mode-plugin.zsh" so that
-    zsh can use (C-space) as ESC
-    ```
-    (bindkey '^@' vi-cmd-mode)
-    ```
+## Auto Sleep and Lock
+Add this line in /etc/sudoers
+```
+ALL ALL=NOPASSWD: /usr/bin/zzz
+```
+Put file in /etc/zzz.d/suspend/slock and fill it with this:
+```
+#!/bin/sh
+xset s activate
+sleep 3s
+```
+then
+```
+chmod +x slock
+```
+Install this packages:
+```
+sudo xbps-install xautolock xss-lock
+```
+Install slock from suckless
+Add this line .xinitrc
+```
+xss-lock slock &
+xautolock -time 15 -locker "sudo zzz" &
+```
+## ZSH
+Add this line in zsh plugin "vi-mode-plugin.zsh" so that
+zsh can use (C-space) as ESC
+```
+(bindkey '^@' vi-cmd-mode)
+```
 
-# /etc/rc.local
-    *   Hide message when startup (usually broadcom error)
-        ```
-        dmesg -n 1
-        ```
-    *   Save brightness when startup
-        ```
-        echo 155 > /sys/class/backlight/radeon_bl0/brightness
-        ```
+## /etc/rc.local
+Hide message when startup (usually broadcom error)
+```
+dmesg -n 1
+```
+Save brightness when startup
+```
+echo 155 > /sys/class/backlight/radeon_bl0/brightness
+```
 
-# Git
-    ## Git Bare
-        *   First create repository in github
-        *   git init --bare (inside folder)
-        *   git remote add origin "url from that repository" (inside folder)
-        *   paste this line in .bashrc or .zshrc:
-            ```
-            alias config='/usr/bin/git --git-dir=$HOME/folder-example --work-tree=$HOME'
-            ```
-        *   In terminal run:
-            ```
-            config config --local status.showUntrackedFiles no
-            ```
-        *   Lakukan perintah git sesuai alias diatas:
-            ```
-            config add (file/folder)
-            config commit -m "comment"
-            config push origin main
-            ```
-    ## Git Remove
-        *   Remove directory from Git but Nor local
-            ```
-            git rm -r --cached myFolder
-            git commit -m "Remove Folder"
-            git pus
-            ```
-        *   Remove directory from Git and local
-            ```
-            git rm -r myFolder
-            git commit -m "Remover Folder"
-            git push
-            ```
+## Git
+### Git Bare
+First create repository in github
+git init --bare (inside folder)
+git remote add origin "url from that repository" (inside folder)
+paste this line in .bashrc or .zshrc:
+```
+alias config='/usr/bin/git --git-dir=$HOME/folder-example --work-tree=$HOME'
+```
+In terminal run:
+```
+config config --local status.showUntrackedFiles no
+```
+Lakukan perintah git sesuai alias diatas:
+```
+config add (file/folder)
+config commit -m "comment"
+config push origin main
+```
+### Git Remove
+Remove directory from Git but Nor local
+```
+git rm -r --cached myFolder
+git commit -m "Remove Folder"
+git pus
+```
+Remove directory from Git and local
+```
+git rm -r myFolder
+git commit -m "Remover Folder"
+git push
+```
