--- a/.notes.md
+++ b/.notes.md
@@ -20,6 +20,7 @@ NB: Ini harus di patch manual\
 6.Patch autoresize\
 NB: Tidak tahu patch ini bekarja apa tidak\
 7.Patch alwayscenter\
+8. Patch dwm-resizehere
 
 ## DWMBLOCKS
 Date format that is i used:
