--- a/.notes.md
+++ b/.notes.md
@@ -1,4 +1,11 @@
-#   Setup My void linux 32bit
+---------------------------------------------
+            _     _   _________  _     _ _
+__   _____ (_) __| | |___ /___ \| |__ (_) |_
+\ \ / / _ \| |/ _` |   |_ \ __) | '_ \| | __|
+ \ V / (_) | | (_| |  ___) / __/| |_) | | |_
+  \_/ \___/|_|\__,_| |____/_____|_.__/|_|\__|
+---------------------------------------------
+#   My setup void linux 32bit
 ## DWM
 1.Patch (dwm-functionalgaps+pertag)\
 functionalgaps:\
