--- a/.notes.md
+++ b/.notes.md
@@ -27,7 +27,8 @@ NB: Ini harus di patch manual\
 6.Patch autoresize\
 NB: Tidak tahu patch ini bekarja apa tidak\
 7.Patch alwayscenter\
-8.Patch dwm-resizehere
+8.Patch dwm-resizehere\
+8.Patch dwm-removeborder
 
 ## DWMBLOCKS
 Date format that is i used:
