--- a/.notes.md
+++ b/.notes.md
@@ -17,18 +17,21 @@ dengan setup Tag sebelumnya\
 include di config.h/dwm.c\
 shiftview gunanya buat pindah workspace pakai\
 MODKEY bracket\
-3.Buat file "movestack.c" di folder dwm\
+3.Patch dwm-shiftviewclient\
+gunanya buat pindah occupied workspace pakai\
+MODKEY|Shift bracket\
+4.Buat file "movestack.c" di folder dwm\
 include di config.h/dwm.c\
 movestack gunanya buat pindah stack pakai\
 MODKEY Shift j/k\
-4.Patch warp gunanya biar cursor ikut saat pindah stack(app)\
+5.Patch warp gunanya biar cursor ikut saat pindah stack(app)\
 NB: Ini harus di patch manual\
-5.Patch actualfullscreen\
-6.Patch autoresize\
+6.Patch actualfullscreen\
+7.Patch autoresize\
 NB: Tidak tahu patch ini bekarja apa tidak\
-7.Patch alwayscenter\
-8.Patch dwm-resizehere\
-8.Patch dwm-removeborder
+8.Patch alwayscenter\
+9.Patch dwm-resizehere\
+10.Patch dwm-removeborder
 
 ## DWMBLOCKS
 Date format that is i used:
