--- a/.notes.md
+++ b/.notes.md
@@ -26,6 +26,11 @@ NB: Tidak tahu patch ini bekarja apa tidak\
 9.Patch dwm-resizehere\
 10.Patch dwm-removeborder
 
+## Packages
+```
+sudo xbps-install xorg-xinit xorg git vim-x11 noto-fonts-emoji
+```
+
 ## DWMBLOCKS
 Date format that is i used:
 ```bash
