--- a/.notes.md
+++ b/.notes.md
@@ -28,7 +28,9 @@ NB: Tidak tahu patch ini bekarja apa tidak\
 
 ## Packages
 ```
-sudo xbps-install xorg-xinit xorg git vim-x11 noto-fonts-emoji
+sudo xbps-install xorg-xinit xorg git vim-x11
+noto-fonts-ttf noto-fonts-cjk
+noto-fonts-emoji
 ```
 
 ## DWMBLOCKS
