--- a/.notes.md
+++ b/.notes.md
@@ -29,8 +29,7 @@ NB: Tidak tahu patch ini bekarja apa tidak\
 ## Packages
 ```
 sudo xbps-install xorg-xinit xorg git vim-x11
-noto-fonts-ttf noto-fonts-cjk
-noto-fonts-emoji
+noto-fonts-ttf noto-fonts-cjk noto-fonts-emoji
 ```
 
 ## DWMBLOCKS
@@ -76,7 +75,7 @@ Hide message when startup (usually broadcom error)
 ```
 dmesg -n 1
 ```
-Save brightness when startup
+## Save brightness when startup
 ```
 echo 155 > /sys/class/backlight/radeon_bl0/brightness
 ```
