--- a/.notes.md
+++ b/.notes.md
@@ -24,7 +24,11 @@ NB: Ini harus di patch manual\
 NB: Tidak tahu patch ini bekarja apa tidak\
 8.Patch alwayscenter\
 9.Patch dwm-resizehere\
-10.Patch dwm-removeborder
+10.Patch dwm-removeborder\
+11.Patch dwm-tiledmove:\
+move window with super+rightclick,\
+super+rightclick in number of tag\
+active window will be moved in that tag
 
 ## Packages
 ```
