--- a/.notes.md
+++ b/.notes.md
@@ -33,7 +33,7 @@ active window will be moved in that tag
 ## Packages
 ```
 sudo xbps-install xorg-xinit xorg git vim-x11
-noto-fonts-ttf noto-fonts-cjk noto-fonts-emoji
+google-fonts-ttf noto-fonts-ttf noto-fonts-cjk noto-fonts-emoji
 ```
 
 ## DWMBLOCKS
