--- a/.notes.md
+++ b/.notes.md
@@ -28,7 +28,8 @@ NB: Tidak tahu patch ini bekarja apa tidak\
 11.Patch dwm-tiledmove:\
 move window with super+rightclick,\
 super+rightclick in number of tag\
-active window will be moved in that tag
+active window will be moved in that tag\
+12.Patch dwm-focusonclick
 
 ## Packages
 ```
